wip(SDK-A): checkpoint inherited work
